--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ body{
     text-align: center;          /* for ie */
     color:#ffffff;
     font-family: "junction", Helvetica, Verdana, Arial, serif;
+    font-size:12px;
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
 }
 
 #content {
@@ -36,7 +42,7 @@ body{
 
 #header {
     width: 100%;
-    height: 105px;
+    height: 100px;
     background: url(images/headslice.jpg) repeat-x;
     display: block;
     clear: both;
@@ -53,6 +59,31 @@ body{
     float: right;
     margin-right: 20px;
     margin-top: 50px;
+    font-size: 1.4em;
+}
+
+.nav {
+    width: 100%;
+    font-family: "Ubuntu", verdana, arial, georgia, serif;
+    font-size: 1.8em;
+    text-align:center;
+    padding-bottom:5px;
+}
+
+.nav a {
+    background: #97C8FE;
+    color: #012B67;
+    padding: 0px 15px;
+    margin-right: 10px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-box-shadow: 0 1px 3px #000;
+    -webkit-box-shadow: 0 1px 3px #000;
+    text-shadow: 0 2px 2px rgba(0,0,0,0.25);
+}
+.nav a:hover {
+    color: #ffffff;
+
 }
 
 #footer {
