--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ h4 {
     width: 800px;
     margin: 0px auto;
     text-align: left;            /* restoration of ie hack */
-    height:100%;
 }
 
 #header {
@@ -167,9 +166,10 @@ h4 {
 #footer {
     margin-top: 40px;
     background: url(images/pandamonkium.png) bottom right no-repeat;
-    min-height: 60px;
     text-align: center;
     font-size: 0.8em;
     clear: both;
-    display: block;   
+    display: block;
+    vertical-align:bottom;
+    bottom:0px;
 }
